# test

./: .gitignore  CLAIMS.md  GOALS.md  POST_COMMIT_ARTIFACT_NOTE.md  README.md  ROUND2_COMPLETION_REPORT.md  ROUND3_COMPLETION_REPORT.md  ROUND4_COMPLETION_REPORT.md  ROUND5_COMPLETION_REPORT.md  kv_ring_report.txt  kv_ring_results.json  pyproject.toml  requirements.txt  simulate_kv_ring.py
configs/: models.local.json
flowmorph/: __init__.py  analyzer.py  converters.py  ir.py  reporting.py  schedulers.py
kvring/: __init__.py  accounting.py  admission.py  artifacts.py  attention_math.py  baselines.py  config.py  kvring_v1.py  kvring_v2.py  kvring_v3.py  mesh.py  metrics.py  models.py  placement.py  plotting.py  routes.py  routing.py  units.py  validation.py
reports/: agent_trace_profile.md
scripts/: audit_adaptive_execution_semantics.py  calibrate_h100.py  calibrate_h100_real.py  calibrate_prefix_extension.py  collect_h100_traces.py  evaluate_policy_selector.py  export_kvring_artifacts.py  export_paper_artifacts.py  export_paper_figures.py  export_round13_paper_artifacts.py  fit_shared_attention_cost_model.py  make_paper_figures.py  make_report.py  plot_all.py  run_ablation.py  run_adaptive_policy_sweep.py  run_all.py  run_cohort_admission_study.py  run_controlled_regime_sweep.py  run_correctness_tests.py  run_decode_cohort_sweep.py  run_existing_cache_gap.py  run_global_ablation.py  run_global_serving_sweep.py  run_kvring_baselines.py  run_kvring_h100_microbench.py  run_kvring_sweep.py  run_kvring_sweeps.py  run_prefix_realism_sensitivity.py  run_query_tile_sweep.py  (+14 more)
(+954 files in other folders)
